# live-translate-rs

./: .gitignore  Cargo.toml  config.example.toml  piper.sh
.github/workflows/: rust.yml
src/: audio_jack.rs  config.rs  main.rs  piper.rs  util.rs  whisper.rs
src/sound/: audio_jack.rs  mod.rs
